<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/ad_cat1">
        <menu>
            <item android:title="@string/ad_my_ads"
                android:id="@+id/ad_my_ads"/>
            <item android:title="@string/ad_car"
                android:id="@+id/ad_car"/>
            <item android:title="@string/ad_pc"
                android:id="@+id/ad_pc"/>
            <item android:title="@string/ad_phone"
                android:id="@+id/ad_phone"/>
        </menu>
    </item>
    <item android:title="@string/ad_cat2">
        <menu>
            <item android:title="@string/ac_sing_in"
                android:id="@+id/ac_sing_in"/>
            <item android:title="@string/ac_sing_up"
                android:id="@+id/ac_sing_up"/>
            <item android:title="@string/ac_sing_out"
                android:id="@+id/ac_sing_out"/>
        </menu>
    </item>
</menu>